--- a/BuyerProfile.html
+++ b/BuyerProfile.html
@@ -19,6 +19,13 @@
           <a href="#">About Us</a>
           <a href="#">Login</a>
           <a href="#">Sign Up</a>
+          <img
+            src="img/silo.png"
+            alt="silohette profile image"
+            height="48"
+            width="48"
+            class="profile-box-img"
+          />
         </nav>
 
         <h1>Buyer Profile</h1>
@@ -55,6 +62,72 @@
 
       <div class="recent-prop">
         <p>Recently Viewed Properties</p>
+        <div class="property">
+          <img
+            src="img/property1.png"
+            alt="property one"
+            height="250"
+            width="250"
+            class="property-img"
+          />
+          <h2>Property Location</h2>
+          <p>List time</p>
+          <p>List active tive</p>
+        </div>
+        <div class="property">
+          <img
+            src="img/property2.png"
+            alt="property two"
+            height="250"
+            width="250"
+            class="property-img"
+          />
+          <h2>Property Location</h2>
+          <p>List time</p>
+          <p>List active tive</p>
+        </div>
+      </div>
+
+      <div class="messages">
+        <p>Messages</p>
+        <table style="width: 100%;">
+          <table border="1">
+          <tr>
+            <th>From</th> 
+            <th>Property</th>
+            <th>Message Type</th>
+            <th>Message</th>
+            <th>Options</th>
+          </tr>
+        <ul>
+        <tr>
+        <td><img
+          src="img/silo.png"
+          alt="silohette profile image"
+          height="48"
+          width="48"
+          class="profile-box-img"
+        /></td>
+        <td><img
+          src="img/property1.png"
+          alt="property one"
+          height="250"
+          width="250"
+          class="property-img"
+        /></td>
+        <td><p>Viewing Request</p> <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+        </svg></td>
+        <td>Hello, bla bla bla</td>
+        <td><button class="message-options">Reply<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+        </svg></button> <button class="message-options">Delete<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+        </svg></button></td>
+        </tr>
+        </ul>
+        </table>
       </div>
     </div>
   </body>
