--- a/BuyerProfile.html
+++ b/BuyerProfile.html
@@ -9,33 +9,40 @@
   </head>
   <body>
     <div class="container">
-      <header class="main header">
-        <nav>
+      <header class="main-header">
+        <nav class="navigation">
           <!-- <strong>This is the navigation</strong> -->
+          <img
+          src="img/Homeview-logo.png"
+          alt="homeview logo"
+          height="62"
+          width="62"
+          class="homeview"
+          />
           <a href="index.html">Home</a>
           <a href="#">Buy</a>
           <a href="#">Sell</a>
           <a href="#">Help</a>
           <a href="#">About Us</a>
-          <a href="#">Login</a>
+          <a href="#" class="profile-box-img">Login</a>
           <a href="#">Sign Up</a>
           <img
-            src="img/silo.png"
-            alt="silohette profile image"
-            height="48"
-            width="48"
-            class="profile-box-img"
+          src="img/silo.png"
+          alt="silohette profile image"
+          height="48"
+          width="48"
+          class="profile-box-img1"
           />
         </nav>
-
+        
         <h1>Buyer Profile</h1>
         <div class="profile-box">
           <img
-            src="img/silo.png"
-            alt="silohette profile image"
-            height="48"
-            width="48"
-            class="profile-box-img"
+          src="img/silo.png"
+          alt="silohette profile image"
+          height="48"
+          width="48"
+          class="profile-box-img"
           />
           <p>Full Name</p>
           <p>@username</p>
@@ -44,22 +51,22 @@
         <button>
           Start Searching
           <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-            />
-          </svg>
-        </button>
-      </header>
-
+          <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+          />
+        </svg>
+      </button>
+    </header>
+      
       <div class="recent-prop">
         <p>Recently Viewed Properties</p>
         <div class="property">
@@ -130,5 +137,11 @@
         </table>
       </div>
     </div>
+    <footer><div class="homeview-footer"> <p>Copyright 2022 HomeView</p></div> 
+      <nav>
+        <a href="#">FAQ</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a></nav>
+      </footer>
   </body>
 </html>
