--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="navigation-bar">
           <li><a class="nav-item" href="index.html">Home</a></li>
           <li><a class="nav-item" href="buyer.html">Buy</a></li>
-          <li><a class="nav-item" href="#">Sell</a></li>
+          <li><a class="nav-item" href="seller.html">Sell</a></li>
           <li><a class="nav-item" href="#">Help</a></li>
           <li><a class="nav-item" href="#">About Us</a></li>
         </ul>
@@ -48,7 +48,7 @@
             </p>
             <div class="cta-btns">
               <button class="cta-btn major-btn" href="#">
-                <div class="cta-btn-contents">
+                <div class="btn-contents">
                   <span>Start Searching</span>
                   <ion-icon
                     class="cta-btn-icon"
@@ -57,7 +57,7 @@
                 </div>
               </button>
               <button class="cta-btn minor-btn" href="#">
-                <div class="cta-btn-contents">
+                <div class="btn-contents">
                   <span>Create A Listing</span>
                   <ion-icon
                     class="cta-btn-icon"
@@ -303,13 +303,13 @@
           <h5 class="final-heading">Join The House Trading Revolution</h5>
           <div class="cta-btns final-btns">
             <button class="cta-btn major-btn" href="#">
-              <div class="cta-btn-contents">
+              <div class="btn-contents">
                 <span>Start Searching</span>
                 <ion-icon class="cta-btn-icon" name="search-outline"></ion-icon>
               </div>
             </button>
             <button class="cta-btn minor-btn" href="#">
-              <div class="cta-btn-contents">
+              <div class="btn-contents">
                 <span>Create A Listing</span>
                 <ion-icon class="cta-btn-icon" name="create-outline"></ion-icon>
               </div>
