Linked create listing page to buttons

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                   ></ion-icon>
                 </div>
               </button>
-              <button class="cta-btn minor-btn" href="#">
+              <form style="display: inline" action="createAListing.html" method="get">
+                <button class="cta-btn minor-btn">
+              </form>
                 <div class="btn-contents">
                   <span>Create A Listing</span>
                   <ion-icon
@@ -308,7 +310,9 @@
                 <ion-icon class="cta-btn-icon" name="search-outline"></ion-icon>
               </div>
             </button>
-            <button class="cta-btn minor-btn" href="#">
+            <form style="display: inline" action="createAListing.html" method="get">
+              <button class="cta-btn minor-btn" href="#">
+            </form>
               <div class="btn-contents">
                 <span>Create A Listing</span>
                 <ion-icon class="cta-btn-icon" name="create-outline"></ion-icon>
