--- a/seller.html
+++ b/seller.html
@@ -60,7 +60,9 @@
       <section class="section-sell-main">
         <div class="sell-main-content container">
           <div class="sell-main-content-container">
-            <button class="cta-btn major-btn seller-cta" href="#">
+            <form style="display: inline" action="createAListing.html" method="get">
+              <button class="cta-btn major-btn seller-cta" href="#">
+            </form>
               <div class="btn-contents">
                 <span>Create a Listing</span>
                 <ion-icon class="cta-btn-icon" name="create-outline"></ion-icon>
