--- a/ViewProperty.html
+++ b/ViewProperty.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="viewproperty.css" rel="stylesheet" />
+  <link href="css/viewerpage.css" rel="stylesheet" />
   <title>View Property</title>
   </head>
 
@@ -13,9 +13,9 @@
     <ul class="navigation-bar">
       <li><a class="nav-item" href="index.html">Home</a></li>
       <li><a class="nav-item" href="buyer.html">Buy</a></li>
-      <li><a class="nav-item" href="#">Sell</a></li>
-      <li><a class="nav-item" href="#">Help</a></li>
-      <li><a class="nav-item" href="#">About Us</a></li>
+      <li><a class="nav-item" href="seller.html">Sell</a></li>
+      <li><a class="nav-item" href="help.html">Help</a></li>
+      <li><a class="nav-item" href="AboutUs.html">About Us</a></li>
     </ul>
     <div class="account-section">
       <ul class="account-options">
