--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="help.css" />
+    <link rel="stylesheet" href="css/help.css" />
 
     <title>Help</title>
   </head>
@@ -23,8 +23,8 @@
           <li><a class="nav-item" href="index.html">Home</a></li>
           <li><a class="nav-item" href="buyer.html">Buy</a></li>
           <li><a class="nav-item" href="seller.html">Sell</a></li>
-          <li><a class="nav-item" href="#">Help</a></li>
-          <li><a class="nav-item" href="#">About Us</a></li>
+          <li><a class="nav-item" href="help.html">Help</a></li>
+          <li><a class="nav-item" href="AboutUs.html">About Us</a></li>
         </ul>
         <div class="account-section">
           <ul class="account-options">
