--- a/seller.html
+++ b/seller.html
@@ -25,8 +25,8 @@
           <li><a class="nav-item" href="index.html">Home</a></li>
           <li><a class="nav-item" href="buyer.html">Buy</a></li>
           <li><a class="nav-item" href="seller.html">Sell</a></li>
-          <li><a class="nav-item" href="#">Help</a></li>
-          <li><a class="nav-item" href="#">About Us</a></li>
+          <li><a class="nav-item" href="help.html">Help</a></li>
+          <li><a class="nav-item" href="AboutUs.html">About Us</a></li>
         </ul>
         <div class="account-section">
           <ul class="account-options">
