Upload image section for create a listing

--- a/createAListing.html
+++ b/createAListing.html
@@ -179,7 +179,113 @@
                     ></ion-icon
                   ></label>
                   <div class="create-listing-images-upload-box">
-                    <span>UPLOAD SECTION FOR IMAGES</span>
+                    <div class="image-upload-btn-section">
+                      <button class="cta-btn major-btn" href="#">
+                        <div class="btn-contents">
+                          <span>Upload</span>
+                          <ion-icon
+                            class="cta-btn-icon"
+                            name="cloud-upload-outline"
+                          ></ion-icon>
+                        </div>
+                      </button>
+                      <p class="image-upload-info">
+                        Maximum file size<br />25mb<br />Supported file
+                        types:<br />.JPEG, .JPG, .PNG
+                      </p>
+                    </div>
+                    <div class="create-listing-image-view-section">
+                      <div
+                        class="create-listing-image-1-section create-listing-image-section"
+                      >
+                        <img
+                          class="create-listing-img"
+                          src="img/house_4.webp"
+                          alt="your first uploaded property image"
+                        />
+                        <button
+                          class="buyer-message-delete-btn delete-btn options-btn create-listing-img-delete-button"
+                        >
+                          Delete
+                          <ion-icon
+                            class="buyer-message-delete-icon btn-icon"
+                            name="trash-bin-outline"
+                          ></ion-icon>
+                        </button>
+                      </div>
+                      <div
+                        class="create-listing-image-1-section create-listing-image-section"
+                      >
+                        <img
+                          class="create-listing-img"
+                          src="img/house_4.webp"
+                          alt="your first uploaded property image"
+                        />
+                        <button
+                          class="buyer-message-delete-btn delete-btn options-btn create-listing-img-delete-button"
+                        >
+                          Delete
+                          <ion-icon
+                            class="buyer-message-delete-icon btn-icon"
+                            name="trash-bin-outline"
+                          ></ion-icon>
+                        </button>
+                      </div>
+                      <div
+                        class="create-listing-image-1-section create-listing-image-section"
+                      >
+                        <img
+                          class="create-listing-img"
+                          src="img/house_4.webp"
+                          alt="your first uploaded property image"
+                        />
+                        <button
+                          class="buyer-message-delete-btn delete-btn options-btn create-listing-img-delete-button"
+                        >
+                          Delete
+                          <ion-icon
+                            class="buyer-message-delete-icon btn-icon"
+                            name="trash-bin-outline"
+                          ></ion-icon>
+                        </button>
+                      </div>
+                      <div
+                        class="create-listing-image-1-section create-listing-image-section"
+                      >
+                        <img
+                          class="create-listing-img"
+                          src="img/house_4.webp"
+                          alt="your first uploaded property image"
+                        />
+                        <button
+                          class="buyer-message-delete-btn delete-btn options-btn create-listing-img-delete-button"
+                        >
+                          Delete
+                          <ion-icon
+                            class="buyer-message-delete-icon btn-icon"
+                            name="trash-bin-outline"
+                          ></ion-icon>
+                        </button>
+                      </div>
+                      <div
+                        class="create-listing-image-1-section create-listing-image-section"
+                      >
+                        <img
+                          class="create-listing-img"
+                          src="img/house_4.webp"
+                          alt="your first uploaded property image"
+                        />
+                        <button
+                          class="buyer-message-delete-btn delete-btn options-btn create-listing-img-delete-button"
+                        >
+                          Delete
+                          <ion-icon
+                            class="buyer-message-delete-icon btn-icon"
+                            name="trash-bin-outline"
+                          ></ion-icon>
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="create-listing-icon-selector">
