--- a/profilepage.html
+++ b/profilepage.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="/css/profile.css" />
+    <link rel="stylesheet" href="/css/profilepage.css" />
     <title>HomeView</title>
   </head>
   <body>
@@ -26,8 +26,8 @@
       
       <nav class="main-nav-login">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="login.html">Login</a></li>
-          <li><a class="main-nav-link" href="signup.html">Sign Up</a></li>
+          <li><a class="main-nav-link" href="/login.html">Login</a></li>
+          <li><a class="main-nav-link" href="/signup.html">Sign Up</a></li>
         </ul>
 
         
@@ -124,7 +124,7 @@
       </div>
     </section>
     <footer class="footer">
-      <img class="logo-footer" src="img/HomeView.png" alt="logo of HomeView" />
+      <img class="logo-footer" src="img/logo.png" alt="logo of HomeView" />
       <nav class="footer-nav">
         <ul class="main-nav-list">
           <span class="material-icons material-icons-footer">
